Ajustes de tamaño

--- a/cu.html
+++ b/cu.html
@@ -26,8 +26,7 @@
   <div class="container h-100">
     <div class="row h-100 align-items-center">
       <div class="col-12 text-center">
-        <h1 class="pb-3 pb-sm-4 pb-md-5">Campus
-        <label>Villa Nueva</label></h1>
+        <h1>Campus <label>Villa Nueva</label></h1>
       </div>
     </div>
   </div>
