--- a/cu.html
+++ b/cu.html
@@ -350,7 +350,7 @@
           <div class="row">
             <div class="col-12">
               <h5>
-                Datos <label>de contacto</label>
+                Contacto</label>
               </h5>
             </div>
           </div>
