--- a/cu.html
+++ b/cu.html
@@ -36,16 +36,16 @@
         <div class="container">
 
           <div class="row">
-            <div class="col-3">
+            <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3">
               <h2 class="pb-3 pb-sm-4 pb-md-5 text-center"><label>402</label> Aulas <br>modernas</h2>
             </div>
-            <div class="col-3">
+            <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3">
               <h2 class="pb-3 pb-sm-4 pb-md-5 text-center"><label>+66,135</label> Egresados </h2>
             </div>
-            <div class="col-3">
+            <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3">
               <h2 class="pb-3 pb-sm-4 pb-md-5 text-center"><label>146</label> Carreras <br>  activas</h2>
             </div>
-            <div class="col-3">
+            <div class="col-8 offset-2 col-md-3 offset-md-0 col-lg-3">
               <h2 class="pb-3 pb-sm-4 pb-md-5 text-center"><label>57</label> Años al servicio<br> de la Educación</h2>
             </div>
           </div>
@@ -96,15 +96,31 @@
                 <ul class="ps-3">
                   <li>
                     <a href="/licenciatura/administracion">
-                      Administración de Empresas (Matutina, vespertino) </a>
+                      Administración de Empresas (Matutina, vespertino, plan sábado) </a>
+                  </li>
+                  <li>
+                    <a href="/licenciatura/administracion_educativa">
+                      Administración Educativa (Plan sábado) </a>
+                  </li>
+                  <li>
+                    <a href="/licenciatura/administracion_educativa">
+                      Administración Pública Municipal (Plan sábado) (Virtual) </a>
                   </li>
                   <li>
                     <a href="/licenciatura/arquitectura">
                       Arquitectura (Matutina)  </a>
                   </li>
                   <li>
-                    <a href="/licenciatura/derech">
-                      Ciencias Jurídicas y Sociales (Matutina, vespertino) </a>
+                    <a href="/licenciatura/derecho">
+                      Ciencias Jurídicas y Sociales (Matutina, vespertino, plan sábado) </a>
+                  </li>
+                  <li>
+                    <a href="/licenciatura/auditoria">
+                      Contaduría Públia y Auditoría (Plan sábado) </a>
+                  </li>
+                  <li>
+                    <a href="/licenciatura/ingles_tecnologia_educativa">
+                      Enseñanza del idiomas inglés con especialización en tecnología educativa (Plan sábado) </a>
                   </li>
                   <li>
                     <a href="/licenciatura/civil">
@@ -116,7 +132,15 @@
                   </li>
                   <li>
                     <a href="/licenciatura/sistemas">
-                      Ingeniería en Sistemas de Información (Matutina, vespertino)  </a>
+                      Ingeniería en Sistemas de Información (Matutina, vespertino, plan sábado)  </a>
+                  </li>
+                  <li>
+                    <a href="/licenciatura/psicologia_clinica">
+                      Psicología Clínica (Plan sábado)  </a>
+                  </li>
+                  <li>
+                    <a href="/licenciatura/psicologia_industrial">
+                      Psicología Industrial (Plan sábado)  </a>
                   </li>
                   <li>
                     <a href="/licenciatura/mercadotecnia">
@@ -269,14 +293,14 @@
           </div>
 
           <div class="row">
-            <div class="col-6">
+            <div class="offset-md-0 col-lg-6">
              <picture>
-              <img src="img/villa_nueva/villa_nueva_laboratorio1.webp" style="width: 100%;" alt="Villa Nueva">
+             <a href="villanueva/laboratorios"><img src="img/villa_nueva/villa_nueva_laboratorio1.webp" class="image"  alt="Villa Nueva"></a>
              </picture>
             </div>
-            <div class="col-6">
+            <div class="offset-md-0 col-lg-6">
               <picture>
-               <img src="img/villa_nueva/villa_nueva_laboratorio2.webp" style="width: 100%;" alt="Villa Nueva">
+               <img src="img/villa_nueva/villa_nueva_laboratorio2.webp" class="image" alt="Villa Nueva">
               </picture>
              </div>
           </div>
@@ -297,43 +321,43 @@
 
           
           <div class="row">
-            <div class="col-1">
+            <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service">
              <picture>
               <img src="img/villa_nueva/iconos/parqueo.svg" style="width: 100%;" alt="Villa Nueva">
              </picture>
             </div>
-            <div class="col-1">
+            <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service">
               <picture>
                <img src="img/villa_nueva/iconos/cajero.svg" style="width: 100%;" alt="Villa Nueva">
               </picture>
              </div>
 
-             <div class="col-1">
+             <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service">
               <picture>
                <img src="img/villa_nueva/iconos/biblioteca.svg" style="width: 100%;" alt="Villa Nueva">
               </picture>
              </div>
-             <div class="col-1">
+             <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service">
               <picture>
                <img src="img/villa_nueva/iconos/cafeteria.svg" style="width: 100%;" alt="Villa Nueva">
               </picture>
              </div>
-             <div class="col-1">
+             <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service">
               <picture>
                <img src="img/villa_nueva/iconos/laboratorios.svg" style="width: 100%;" alt="Villa Nueva">
               </picture>
              </div>
-             <div class="col-1">
+             <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service" >
               <picture>
                <img src="img/villa_nueva/iconos/odontologia.svg" style="width: 100%;" alt="Villa Nueva">
               </picture>
              </div>
-             <div class="col-1">
+             <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service" >
               <picture>
                <img src="img/villa_nueva/iconos/psicologia.svg" style="width: 100%;" alt="Villa Nueva">
               </picture>
              </div>
-             <div class="col-1">
+             <div class="col-3 offset-2 col-md-3 offset-md-0 col-lg-1 icons_service">
               <picture>
                <img src="img/villa_nueva/iconos/bufete.svg" style="width: 100%;" alt="Villa Nueva">
               </picture>
@@ -350,19 +374,19 @@
           <div class="row">
             <div class="col-12">
               <h5>
-                Contacto</label>
+                <label>Contacto</label>
               </h5>
             </div>
           </div>
 
           
           <div class="row">
-            <div class="col-6">
+            <div class="col-6 contacto_info">
              <h4>Villa Nueva</h4>
-             <p>Villa Nueva, Guatemala, carretera Antigua a Amatitlán, KM 20.5, zona 10 Villa Nueva.<br> PBX: 79640500. <a href="mailto:villanueva@umg.edu.gt">villanueva@umg.edu.gt</a></p>
+             <p>Villa Nueva, Guatemala, carretera Antigua a Amatitlán,<br> KM 20.5, zona 10 Villa Nueva.<br> PBX: 79640500. <a href="mailto:villanueva@umg.edu.gt">villanueva@umg.edu.gt</a></p>
             </div>
-            <div class="col-6">
-             <p><strong>Horarios:</strong> Lunes a viernes de 07:00 a 19:00 horas. <br>Sábado de 06:00 a 17:00 horas. <br>Domingo de 07:00 a 16:00 horas.</p>
+            <div class="col-6 contacto_info">
+             <br><p><strong>Horarios:</strong> Lunes a viernes de 07:00 a 19:00 horas. <br>Sábado de 06:00 a 17:00 horas. <br>Domingo de 07:00 a 16:00 horas.</p>
              </div>
           </div>
         </div>
