--- a/cu.html
+++ b/cu.html
@@ -14,11 +14,12 @@
     <title>Universidad Mariano Gálvez de Guatemala: Villa Nueva</title>
   </head>
   <body class="cu">
+   
     <header>
-      <nav class="navbar navbar-expand-xl fixed-top p-0 mt-lg-1 mt-xl-2 sticky">
+      <nav class="navbar navbar-expand-xl fixed-top p-0 mt-lg-1 mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" title="Universidad Mariano Gálvez de Guatemala" class="navbar-brand m-0 p-0">
-            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -236,7 +237,7 @@
                   <div class="container pe-xl-4">
                     <div class="row">
                       <div class="col-2 col-sm-1 d-xl-none text-end">
-                        <i class="fi fi-rr-document"></i>
+                        <i class="fi fi-rr-document"></i> 
                       </div>
                       <div class="col-10 col-sm-11 px-0">
                         Admisiones
@@ -251,7 +252,7 @@
                 </div>
               </li>
               <li class="navbar-item dropdown">
-                <a class="nav-link dropdown-toggle pt-lg-1 fs-5 fs-xl-7 fs-xxl-5 text-uppercase text-normal-xl" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">
+                <a class="nav-link dropdown-toggle pt-lg-1 fs-5 fs-xl-7 fs-xxl-5 text-uppercase text-normal-xl" data-bs-toggle="dropdown" data-bs-auto-close="outside">
                   <div class="container pe-xl-4">
                     <div class="row">
                       <div class="col-2 col-sm-1 d-xl-none text-end">
