Ajuste en el banner y otros cambios

--- a/info.html
+++ b/info.html
@@ -14,12 +14,12 @@
 
     <title>Universidad Mariano Gálvez de Guatemala: Centro de Información</title>
   </head>
-  <body class="cu">
+  <body class="info">
   <header>
     <nav class="navbar navbar-expand-xl fixed-top p-0 mt-lg-1 mt-xl-2 sticky">
       <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
         <a href="#" title="Universidad Mariano Gálvez de Guatemala" class="navbar-brand m-0 p-0">
-          <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+          <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
         </a>
         <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
           <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -432,15 +432,11 @@
 
 
     <!-- Full Page Image Header with Vertically Centered Content -->
-    <header class="masthead">
-      <div class="container h-100">
-       <!-- <div class="row h-100 align-items-center">
-          <div class="col-12 text-center">
-            <h1>Centro de<label>información</label></h1>
-          </div>
-        </div> -->
+    <div class="banner position-relative">
+      <div class="acreditacion">
+        <img src="img/random-background.jpeg" class="img-fluid" alt="img-carreras" >
       </div>
-    </header>
+    </div>
 
     <section class="py-4 text-center">
       <div class="container">
@@ -454,25 +450,284 @@
         </div>
 
         <div class="row">
-          <div class="col-4 offset-2 col-md-3 offset-md-0 col-lg-3 icons_service">
-            <h2>Registro y control académico</h2>
-        <ul style="text-align: left;">
+        <div class="offset-md-0 col-lg-3 icons_service block_service">
+         <h2>Registro y control académico</h2>
+        <ul class="list_service">
           <li><b>Pagar la Universidad</b></li>
           <li>Pago de recuperación del curso</li>
+          <li>Cambio de carrera, sede o jornada</li>
+          <li>Equiparaciones</li>
+          <li>Equivalencias</li>
+          <li>Certificación de cursos</li>
         </ul>
           </div>
-          <div class="col-4 offset-2 col-md-3 offset-md-0 col-lg-3 icons_service">
-<h2>Tesorería</h2>
+          <div class="offset-md-0 col-lg-3 icons_service block_service">
+          <h2>Tesorería</h2>
+          <ul class="list_service">
+            <li>Pago de Multas</li>
+            <li>Solvencias</li>
+          </ul>
           </div>
 
-          <div class="col-4 offset-2 col-md-3 offset-md-0 col-lg-3 icons_service">
-<h2>Contabilidad</h2>
+          <div class="offset-md-0 col-lg-3 icons_service block_service">
+          <h2>Contabilidad</h2>
           </div>
-
-
         </div>
+
+        <div class="row">
+          <div class="offset-md-0 col-lg-3 icons_service block_service">
+           <h2>Secretaria General</h2>
+          <ul class="list_service">
+            <li><b>Pagar la Universidad</b></li>
+            <li>Pago de recuperación del curso</li>
+          </ul>
+            </div>
+            <div class="offset-md-0 col-lg-3 icons_service block_service">
+            <h2>Centro de Procesamiento de Datos CEPROD</h2>
+            </div>
+  
+            <div class="offset-md-0 col-lg-3 icons_service block_service">
+            <h2>Servicios Administrativos</h2>
+            </div>
+          </div>
+
       </div>
     </section>
+
+
+    <footer class="position-relative overflow-x-hidden pt-5 pb-4 pt-sm-6 pt-md-7 pt-lg-8">
+      <div class="container g-lg-0">
+        <div class="row">
+          <div class="col-12 col-sm-6 col-xl-3">
+            <nav class="ps-3 ps-sm-0" role="navigation">
+              <h3 class="fs-5 text-uppercase">
+                Universidad
+              </h3>
+              <ul class="list-unstyled ps-0 mt-3 mb-0">
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Nosotros
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Autoridades
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Decálogo Institucional
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Acreditación
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Historia de la Universidad
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Fraternidad de Egresados
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Directorio
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Tour Virtual
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-3">
+            <nav class="ps-3 mt-4 mt-sm-0" role="navigation">
+              <h3 class="fs-5 text-uppercase">
+                Academia
+              </h3>
+              <ul class="list-unstyled ps-0 mt-3 mb-0">
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Facultades
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Dirección de Posgrados
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <nav class="ps-3 mt-4" role="navigation">
+              <h3 class="fs-5 text-uppercase">
+                Investigación
+              </h3>
+              <ul class="list-unstyled ps-0 mt-3 mb-0">
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    CITE
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    I2QB3
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    IN3
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-3">
+            <nav class="ps-3 mt-4 ps-sm-0 mt-xl-0" role="navigation">
+              <h3 class="fs-5 text-uppercase">
+                Centros Universitarios
+              </h3>
+              <ul class="list-unstyled ps-0 mt-3 mb-0">
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Región Metropolitana
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Región Norte
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Región Nororiente
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Región Suroriente
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Región Central
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Región Suroccidente
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Región Norocciente
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Región Petén
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col-12 col-sm-6 col-xl-3">
+            <nav class="ps-3 mt-4 mt-xl-0" role="navigation">
+              <h3 class="fs-5 text-uppercase">
+                Vida Estudiantil
+              </h3>
+              <ul class="list-unstyled ps-0 mt-3 mb-0">
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Calendario Académico
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Biblioteca
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Radio
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Capellanía
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Bicentenario de Centroamérica
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="text-light text-decoration-none">
+                    Enactus
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="col-12 px-sm-0 px-lg-2">
+            <hr class="mx-1 mb-1 mx-sm-0">
+          </div>
+        </div>
+        <div class="row mt-md-3">
+          <div class="col-12 order-2 px-sm-0 d-xl-none px-lg-2">
+            <hr class="mx-1 mb-1 mx-sm-0">
+          </div>
+          <div class="col-12 order-3 mt-3 ps-sm-0 col-xl-3 order-xl-1 mt-xl-0">
+            <div class="container-fluid">
+              <div class="row g-1">
+                <div class="col-6 pe-2 text-end col-sm-3 text-sm-start col-md-2 col-lg-6 text-lg-end mt-xl-0 text-xl-start">
+                  <a href="#" class="footer-icon d-inline-flex align-items-center justify-content-center mx-1 text-light text-decoration-none ms-sm-0">
+                    <i class="fi fi-rs-waveform fs-3 lh-1"></i>
+                  </a>
+                  <a href="#" class="footer-icon d-inline-flex align-items-center justify-content-center mx-1 text-light text-decoration-none">
+                    <i class="fi fi-sr-headphones fs-3 lh-1"></i>
+                  </a>
+                </div>
+                <div class="col-6 ps-2 col-sm-3 ps-sm-0 col-md-2 ps-sm-2 col-xl-6 column-rule position-relative mt-xl-0 text-xl-center">
+                  <a href="#" class="footer-icon d-inline-flex align-items-center justify-content-center mx-1 text-light text-decoration-none ms-sm-0">
+                    <i class="fi fi-brands-android fs-3 lh-1"></i>
+                  </a>
+                  <a href="#" class="footer-icon d-inline-flex align-items-center justify-content-center mx-1 text-light text-decoration-none">
+                    <i class="fi fi-brands-apple fs-3 lh-1"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 order-1 col-xl-9 order-xl-2 mt-xl-1">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-12 order-3 mt-3 text-light ps-3 ps-sm-0 col-md-5 order-md-1 mt-md-0 col-xl-6">
+                  &copy; 2023 Universidad&nbsp;Mariano&nbsp;Gálvez <span class="d-none d-sm-inline-block d-md-none d-lg-inline-block">de Guatemala</span>
+                </div>
+                <div class="col-12 order-2 ps-3 mt-1 ps-sm-0 col-md-4 mt-md-0 text-lg-center col-xl-3">
+                  <a href="#" class="text-light text-decoration-none">
+                    <i class="fi fi-ss-phone-call"></i>&nbsp;&nbsp;PBX:&nbsp;(+502)&nbsp;2411&nbsp;1800
+                  </a>
+                </div>
+                <div class="col-12 order-1 ps-3 mt-3 ps-sm-0 col-md-3 order-md-3 mt-md-0 pe-md-0 text-md-end col-xl-3">
+                  <a href="#" class="text-light text-decoration-none">
+                    <i class="fi fi-rr-envelope"></i>&nbsp;&nbsp;info@umg.edu.gt
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
   </main>
 
