--- a/cu.html
+++ b/cu.html
@@ -432,16 +432,19 @@
     <main>
 
       
+
+
+
   <!-- Full Page Image Header with Vertically Centered Content -->
-<header class="masthead">
-  <div class="container h-100">
-    <div class="row h-100 align-items-center">
+  <div class="banner position-relative">
+    <div class="acreditacion">
+      <img src="img/villa_nueva/villanueva.webp" class="img-fluid" alt="img-carreras" >
       <div class="col-12 text-center">
         <h1>Campus <label>Villa Nueva</label></h1>
       </div>
     </div>
   </div>
-</header>
+
 
       <section class="carreras">
         <div class="container">
