--- a/info.html
+++ b/info.html
@@ -434,7 +434,7 @@
     <!-- Full Page Image Header with Vertically Centered Content -->
     <div class="banner position-relative">
       <div class="acreditacion">
-        <img src="img/random-background.jpeg" class="img-fluid" alt="img-carreras" >
+        <img src="img/centro_de_informacion/centro_de_informacion.webp" class="img-fluid" alt="img-carreras" >
       </div>
     </div>
 
@@ -488,6 +488,23 @@
   
             <div class="offset-md-0 col-lg-3 icons_service block_service">
             <h2>Servicios Administrativos</h2>
+            </div>
+          </div>
+
+           <div class="row">
+          <div class="offset-md-0 col-lg-3 icons_service block_service">
+           <h2>Programa de orientación estudiantil POES</h2>
+          <ul class="list_service">
+            <li><b>Pagar la Universidad</b></li>
+            <li>Pago de recuperación del curso</li>
+          </ul>
+            </div>
+            <div class="offset-md-0 col-lg-3 icons_service block_service">
+            <h2>Biblioteca</h2>
+            </div>
+  
+            <div class="offset-md-0 col-lg-3 icons_service block_service">
+            <h2>Herramientas</h2>
             </div>
           </div>
 
