--- a/cu.html
+++ b/cu.html
@@ -432,15 +432,12 @@
     <main>
 
       
-
-
-
   <!-- Full Page Image Header with Vertically Centered Content -->
   <div class="banner position-relative">
-    <div class="acreditacion">
+    <div class="cu">
       <img src="img/villa_nueva/villanueva.webp" class="img-fluid" alt="img-carreras" >
       <div class="col-12 text-center">
-        <h1>Campus <label>Villa Nueva</label></h1>
+        <h1>Campus<br> <label>Villa Nueva</label></h1>
       </div>
     </div>
   </div>
