--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
 
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/flaticon-uicons.css" rel="stylesheet">
-    <!-- -->
+    <link href="css/flipbox.css" rel="stylesheet">
     <link href="css/_tpl/info.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
@@ -436,6 +436,37 @@
       <div class="acreditacion">
         <img src="img/centro_de_informacion/centro_de_informacion.webp" class="img-fluid" alt="img-carreras" >
       </div>
+
+      <div class="redes-sociales h-100 d-flex position-absolute align-items-center justify-content-center text-center">
+        <ul class="list-unstyled m-0 p-0">
+          <li class="py-2">
+            <a href="#" class="d-flex align-items-center justify-content-center text-decoration-none">
+              <i class="fi fi-brands-facebook"></i>
+            </a>
+          </li>
+          <li class="py-2">
+            <a href="#" class="d-flex align-items-center justify-content-center text-decoration-none">
+              <i class="fi fi-brands-youtube"></i>
+            </a>
+          </li>
+          <li class="py-2">
+            <a href="#" class="d-flex align-items-center justify-content-center text-decoration-none">
+              <i class="fi fi-brands-instagram"></i>
+            </a>
+          </li>
+          <li class="py-2">
+            <a href="#" class="d-flex align-items-center justify-content-center text-decoration-none">
+              <i class="fi fi-brands-tik-tok"></i>
+            </a>
+          </li>
+          <li class="py-2">
+            <a href="#" class="d-flex align-items-center justify-content-center text-decoration-none">
+              <i class="fi fi-brands-linkedin"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+
     </div>
 
     <section class="py-4 text-center">
@@ -444,13 +475,13 @@
         <div class="row">
           <div class="col-12">
             <h5>
-             Centro de información
+             <label>Centro</label> de información
             </h5>
           </div>
         </div>
 
         <div class="row">
-        <div class="offset-md-0 col-lg-3 icons_service block_service">
+        <div class="card offset-md-0 col-lg-3 icons_service block_service">
          <h2>Registro y control académico</h2>
         <ul class="list_service">
           <li><b>Pagar la Universidad</b></li>
@@ -461,7 +492,7 @@
           <li>Certificación de cursos</li>
         </ul>
           </div>
-          <div class="offset-md-0 col-lg-3 icons_service block_service">
+          <div class="card offset-md-0 col-lg-3 icons_service block_service">
           <h2>Tesorería</h2>
           <ul class="list_service">
             <li>Pago de Multas</li>
@@ -469,41 +500,41 @@
           </ul>
           </div>
 
-          <div class="offset-md-0 col-lg-3 icons_service block_service">
+          <div class="card offset-md-0 col-lg-3 icons_service block_service">
           <h2>Contabilidad</h2>
           </div>
         </div>
 
         <div class="row">
-          <div class="offset-md-0 col-lg-3 icons_service block_service">
+          <div class="card offset-md-0 col-lg-3 icons_service block_service">
            <h2>Secretaria General</h2>
           <ul class="list_service">
             <li><b>Pagar la Universidad</b></li>
             <li>Pago de recuperación del curso</li>
           </ul>
             </div>
-            <div class="offset-md-0 col-lg-3 icons_service block_service">
+            <div class="card offset-md-0 col-lg-3 icons_service block_service">
             <h2>Centro de Procesamiento de Datos CEPROD</h2>
             </div>
   
-            <div class="offset-md-0 col-lg-3 icons_service block_service">
+            <div class="card offset-md-0 col-lg-3 icons_service block_service">
             <h2>Servicios Administrativos</h2>
             </div>
           </div>
 
            <div class="row">
-          <div class="offset-md-0 col-lg-3 icons_service block_service">
+          <div class="card offset-md-0 col-lg-3 icons_service block_service">
            <h2>Programa de orientación estudiantil POES</h2>
           <ul class="list_service">
             <li><b>Pagar la Universidad</b></li>
             <li>Pago de recuperación del curso</li>
           </ul>
             </div>
-            <div class="offset-md-0 col-lg-3 icons_service block_service">
+            <div class="card offset-md-0 col-lg-3 icons_service block_service">
             <h2>Biblioteca</h2>
             </div>
   
-            <div class="offset-md-0 col-lg-3 icons_service block_service">
+            <div class="card offset-md-0 col-lg-3 icons_service block_service">
             <h2>Herramientas</h2>
             </div>
           </div>
