--- a/calendario.html
+++ b/calendario.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/carousel.css" rel="stylesheet">
     <link href="css/flaticon-uicons.css" rel="stylesheet">
     <link href="css/flipbox.css" rel="stylesheet">
-    <link href="css/_tpl/calendario.css" rel="stylesheet">
+    <link href="css/redes-sociales.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/flipbox.css">
+    <link href="css/_tpl/calendario.css" rel="stylesheet">
 
     <title>Universidad Mariano Gálvez de Guatemala: Calendario de admisión</title>
   </head>
