--- a/laboratorios.html
+++ b/laboratorios.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link href="css/carousel.css" rel="stylesheet">
+
+    
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/carousel.css" rel="stylesheet">
     <link href="css/flaticon-uicons.css" rel="stylesheet">
+    <link href="css/flipbox.css" rel="stylesheet">
     <link href="css/redes-sociales.css" rel="stylesheet">
+    <link href="app.css" rel="stylesheet">
     <!-- -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link href="css/_tpl/laboratorios-generales.css" rel="stylesheet">
-    <link href="app.css" rel="stylesheet">
+   
+
     <title>tpl: Umg\Laboratorios</title>
 </head>
 <body class="LaboratorioComputo">
