--- a/info.html
+++ b/info.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/carousel.css" rel="stylesheet">
     <link href="css/flaticon-uicons.css" rel="stylesheet">
     <link href="css/flipbox.css" rel="stylesheet">
+    <link href="css/redes-sociales.css" rel="stylesheet">
     <link href="css/_tpl/info.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/flipbox.css">
+    
 
     <title>Universidad Mariano Gálvez de Guatemala: Centro de Información</title>
   </head>
@@ -434,7 +436,13 @@
     <!-- Full Page Image Header with Vertically Centered Content -->
     <div class="banner position-relative">
       <div class="acreditacion">
-        <img src="img/centro_de_informacion/centro_de_informacion.webp" class="img-fluid" alt="img-carreras" >
+        <!--<img src="img/centro_de_informacion/Admisiones_2024-xl.webp" class="img-fluid" alt="img-carreras" >-->
+        <picture>
+          <source srcset="img/centro_de_informacion/Centro-informacion-2024-xl.webp" media="(min-width: 1200px)">
+          <source srcset="img/centro_de_informacion/Centro-informacion-2024-sm.webp" media="(min-width: 576px)">
+          <img srcset="img/centro_de_informacion/Centro-informacion-2024.webp" class="w-100">
+        </picture>
+        
       </div>
 
       <div class="redes-sociales h-100 d-flex position-absolute align-items-center justify-content-center text-center">
@@ -481,20 +489,20 @@
         </div>
 
         <div class="row">
-        <div class="card offset-md-0 col-lg-3 icons_service block_service">
+        <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
           <div class="card-cabecera">
           <h2><label>Registro y control</label> académico</h2>
           </div>
-        <ul class="list_service">
-          <li><b>Pagar la Universidad</b></li>
-          <li>Pago de recuperación del curso</li>
-          <li>Cambio de carrera, sede o jornada</li>
-          <li>Equiparaciones</li>
-          <li>Equivalencias</li>
-          <li>Certificación de cursos</li>
+        <ul class="list_service lista-vinetas">
+          <li><a href="">Pagar la Universidad</a></li>
+          <li><a href="">Pago de recuperación del curso</a></li>
+          <li><a href="">Cambio de carrera, sede o jornada</a></li>
+          <li><a href="">Equiparaciones</a></li>
+          <li><a href="">Equivalencias</a></li>
+          <li><a href="">Certificación de cursos</a></li>
         </ul>
           </div>
-          <div class="card offset-md-0 col-lg-3 icons_service block_service">
+          <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
             <div class="card-cabecera">
           <h2>Tesorería</h2>
             </div>
@@ -504,7 +512,7 @@
           </ul>
           </div>
 
-          <div class="card offset-md-0 col-lg-3 icons_service block_service">
+          <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
             <div class="card-cabecera">
           <h2>Contabilidad</h2>
             </div>
@@ -512,7 +520,7 @@
         </div>
 
         <div class="row">
-          <div class="card offset-md-0 col-lg-3 icons_service block_service">
+          <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
             <div class="card-cabecera">
               <h2><label>Secretaria</label> General</h2>
             </div>
@@ -521,13 +529,13 @@
             <li>Pago de recuperación del curso</li>
           </ul>
             </div>
-            <div class="card offset-md-0 col-lg-3 icons_service block_service">
+            <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
               <div class="card-cabecera">
                 <h2> CEPROD</h2>
               </div>
             </div>
   
-            <div class="card offset-md-0 col-lg-3 icons_service block_service">
+            <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
               <div class="card-cabecera">
                 <h2><label>Servicios</label> Administrativos</h2>
               </div>
@@ -535,7 +543,7 @@
           </div>
 
            <div class="row">
-          <div class="card offset-md-0 col-lg-3 icons_service block_service">
+          <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
             <div class="card-cabecera">
               <h2>POES</h2>
             </div>
@@ -544,13 +552,13 @@
             <li>Pago de recuperación del curso</li>
           </ul>
             </div>
-            <div class="card offset-md-0 col-lg-3 icons_service block_service">
+            <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
               <div class="card-cabecera">
             <h2>Biblioteca</h2>
               </div>
             </div>
   
-            <div class="card offset-md-0 col-lg-3 icons_service block_service">
+            <div class="card-service offset-md-0 col-lg-3 icons_service block_service">
               <div class="card-cabecera">
             <h2>Herramientas</h2>
               </div>
