--- a/laboratorios.html
+++ b/laboratorios.html
@@ -11,6 +11,10 @@
     <link href="css/flipbox.css" rel="stylesheet">
     <link href="css/redes-sociales.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="css/_tpl/laboratorio/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/_tpl/laboratorio/set2.css" />
+
     <!-- -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link href="css/_tpl/laboratorios-generales.css" rel="stylesheet">
@@ -709,6 +713,7 @@
     </nav>
 </header>
 <main>
+    
     <!-- seccion carousel -->
     <section class="banner position-relative">
 
@@ -788,6 +793,29 @@
     </div>
 
     <section>
+
+
+
+      
+				<div class="grid">
+					<figure class="effect-goliath">
+						<img src="img/laboratorios/i2qb3/1.webp" alt="23"/>
+						<figcaption>
+							<h2>Thoughtful <span>Goliath</span></h2>
+							<p>When Goliath comes out, you should run.</p>
+							<a href="#">View more</a>
+						</figcaption>			
+					</figure>
+					<figure class="effect-goliath">
+						<img src="img/laboratorios/i2qb3/2.webp" alt="24"/>
+						<figcaption>
+							<h2>Thoughtful <span>Goliath</span></h2>
+							<p>When Goliath comes out, you should run.</p>
+							<a href="#">View more</a>
+						</figcaption>			
+					</figure>
+				</div>
+
 
     <div class="container mt-5">
         <div class="row">
