--- a/laboratorios.html
+++ b/laboratorios.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-xl fixed-top p-0 mt-lg-1 mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
             <a href="#" title="Universidad Mariano Gálvez de Guatemala" class="navbar-brand m-0 p-0">
-                <img src="img/UMG.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+                <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
             </a>
             <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
                 <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
