--- a/laboratorios.html
+++ b/laboratorios.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
-    
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/carousel.css" rel="stylesheet">
     <link href="css/flaticon-uicons.css" rel="stylesheet">
@@ -13,7 +12,6 @@
     <link href="app.css" rel="stylesheet">
 
     <!-- -->
-  
     <link href="css/_tpl/laboratorios-generales.css" rel="stylesheet">
    
 
@@ -798,14 +796,14 @@
                             <div class="carousel-item active">
                                 <img src="img/laboratorios/i2qb3/1.webp" class="d-block w-100 carousel-img" alt="Imagen 1">
                                 <div class="carousel-overlay">
-                                    <h3>Lorem ipsum dolor sit amet</h3>
+                                  
                                     <p>Esta es una descripción detallada de la foto.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
                                 <img src="img/laboratorios/i2qb3/2.webp" class="d-block w-100 carousel-img" alt="Imagen 2">
                                 <div class="carousel-overlay">
-                                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h5>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
