--- a/laboratorios2.html
+++ b/laboratorios2.html
@@ -3,103 +3,104 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galería con Carrusel de Bootstrap 5</title>
-  <!-- Incluir los estilos de Bootstrap 5 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <title>Bootstrap Carousel con Descripción en Hover</title>
+  <!-- Enlace a Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    /* Estilos adicionales */
-    .gallery-item {
-      position: relative;
-      overflow: hidden;
-    }
-
-    .carousel-img {
-      transition: transform 0.3s;
-    }
-
-    .carousel-img:hover {
-      transform: scale(1.05);
-    }
-
-    .carousel-overlay {
+    /* Estilos personalizados */
+    .carousel-caption {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 10px;
       position: absolute;
       bottom: 0;
       left: 0;
       width: 100%;
+      transition: bottom 0.5s;
+      pointer-events: none;
+    }
+
+    .carousel-item.active .carousel-caption {
+      bottom: -60px;
+    }
+
+    .carousel-item.active:hover .carousel-caption {
+      bottom: 0;
+    }
+
+    .carousel-description {
       background-color: rgba(0, 0, 0, 0.7);
       color: white;
-      padding: 10px;
-      opacity: 0;
-      transition: opacity 0.3s;
-    }
-
-    .gallery-item:hover .carousel-overlay {
-      opacity: 1;
-    }
-
-    .title {
+      margin: 0;
+      padding: 5px 10px;
       position: absolute;
-      bottom: calc(100% + 5px); /* Inicialmente, el título está fuera de la vista */
-      left: 10px;
+      bottom: -60px;
+      left: 0;
+      width: 100%;
+      transition: bottom 0.5s;
+      pointer-events: none;
+    }
+
+    .carousel-item.active:hover .carousel-description {
+      bottom: 0;
+      margin-top: 10px;
+    }
+
+    .carousel-item.active:hover img {
+      transform: translateY(-5px);
+      transition: transform 0.3s;
+    }
+
+    .carousel-title {
       color: white;
-      font-size: 18px;
-      z-index: 2;
-      transition: bottom 0.3s;
+      margin: 0;
+      font-size: 24px;
+      font-weight: bold;
+      position: absolute;
+      top: auto;
+      bottom: 40px; /* Ajusta este valor para posicionar el título */
+      left: 10px;
+      z-index: 1;
     }
 
-    .gallery-item:hover .title {
-      bottom: calc(100% + 10px); /* Ajustar la distancia entre el título y la descripción */
-    }
-
-    .gallery-item:hover .carousel-overlay {
-      bottom: 0; /* Mover la descripción hacia arriba */
+    .carousel-item.active:hover .carousel-title {
+      bottom: 30px; /* Ajusta este valor para posicionar el título cuando aparece la descripción */
     }
   </style>
 </head>
 <body>
-  <div class="container mt-5">
-    <div class="row">
-      <div class="col-lg-8 offset-lg-2">
-        <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <!-- Foto principal con efecto de superposición -->
-            <div class="carousel-item active">
-              <div class="gallery-item">
-                <img src="img/laboratorios/i2qb3/1.webp" class="d-block w-100 carousel-img" alt="Foto 1">
-                <div class="carousel-overlay">
-                  <div class="title">
-                    <h3>Título de la Foto 1</h3>
-                  </div>
-                  <h3>Descripción de la Foto 1</h3>
-                  <p>Esta es una descripción detallada de la foto.</p>
-                </div>
-              </div>
-            </div>
 
-            <!-- Más fotos aquí -->
-          </div>
-        </div>
-
-        <!-- Miniaturas en la parte inferior -->
-        <div class="row mt-3">
-          <div class="col-3">
-            <a href="#galleryCarousel" class="carousel-control-prev" role="button" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </a>
-          </div>
-          <div class="col-3">
-            <a href="#galleryCarousel" class="carousel-control-next" role="button" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </a>
-          </div>
+<div class="container">
+  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/laboratorios/i2qb3/1.webp" class="d-block w-100" alt="Imagen 1">
+        <h3 class="carousel-title">Título de la Imagen 1</h3>
+        <div class="carousel-description">
+          <p>Descripción de la imagen 1.</p>
         </div>
       </div>
+      <div class="carousel-item">
+        <img src="img/laboratorios/i2qb3/2.webp" class="d-block w-100" alt="Imagen 2">
+        <h3 class="carousel-title">Título de la Imagen 2</h3>
+        <div class="carousel-description">
+          <p>Descripción de la imagen 2.</p>
+        </div>
+      </div>
+      <!-- Agrega más elementos carousel-item aquí -->
     </div>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </a>
   </div>
+</div>
 
-  <!-- Incluir los scripts de Bootstrap 5 -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Enlace a Bootstrap JS y dependencias de Popper.js -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
