--- a/laboratorios2.html
+++ b/laboratorios2.html
@@ -1,106 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Carousel con Descripción en Hover</title>
-  <!-- Enlace a Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* Estilos personalizados */
-    .carousel-caption {
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 10px;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      transition: bottom 0.5s;
-      pointer-events: none;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
 
-    .carousel-item.active .carousel-caption {
-      bottom: -60px;
-    }
+        .banner {
+            width: 400px; /* Ancho del banner */
+            height: 400px; /* Alto del banner */
+            display: flex;
+            flex-wrap: wrap;
+            perspective: 1000px;
+        }
 
-    .carousel-item.active:hover .carousel-caption {
-      bottom: 0;
-    }
+        .rombo {
+            width: 50%; /* Ancho de cada rombo en porcentaje */
+            height: 50%; /* Alto de cada rombo en porcentaje */
+            position: relative;
+            perspective: inherit;
+        }
 
-    .carousel-description {
-      background-color: rgba(0, 0, 0, 0.7);
-      color: white;
-      margin: 0;
-      padding: 5px 10px;
-      position: absolute;
-      bottom: -60px;
-      left: 0;
-      width: 100%;
-      transition: bottom 0.5s;
-      pointer-events: none;
-    }
+        .rombo .imagen {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            position: absolute;
+            top: 0;
+            left: 0;
+            transform: rotate(45deg);
+            transform-origin: 50% 50%;
+            transition: transform 0.3s;
+        }
 
-    .carousel-item.active:hover .carousel-description {
-      bottom: 0;
-      margin-top: 10px;
-    }
-
-    .carousel-item.active:hover img {
-      transform: translateY(-5px);
-      transition: transform 0.3s;
-    }
-
-    .carousel-title {
-      color: white;
-      margin: 0;
-      font-size: 24px;
-      font-weight: bold;
-      position: absolute;
-      top: auto;
-      bottom: 40px; /* Ajusta este valor para posicionar el título */
-      left: 10px;
-      z-index: 1;
-    }
-
-    .carousel-item.active:hover .carousel-title {
-      bottom: 30px; /* Ajusta este valor para posicionar el título cuando aparece la descripción */
-    }
-  </style>
+        .rombo:hover .imagen {
+            transform: rotate(0deg);
+        }
+    </style>
+    <title>Rombos en Banner</title>
 </head>
 <body>
-
-<div class="container">
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="img/laboratorios/i2qb3/1.webp" class="d-block w-100" alt="Imagen 1">
-        <h3 class="carousel-title">Título de la Imagen 1</h3>
-        <div class="carousel-description">
-          <p>Descripción de la imagen 1.</p>
+    <div class="banner">
+        <div class="rombo">
+            <img src="img/laboratorios/efectos/1.webp" alt="Imagen 1" class="imagen">
         </div>
-      </div>
-      <div class="carousel-item">
-        <img src="img/laboratorios/i2qb3/2.webp" class="d-block w-100" alt="Imagen 2">
-        <h3 class="carousel-title">Título de la Imagen 2</h3>
-        <div class="carousel-description">
-          <p>Descripción de la imagen 2.</p>
+        <div class="rombo">
+            <img src="img/laboratorios/efectos/2.webp" alt="Imagen 2" class="imagen">
         </div>
-      </div>
-      <!-- Agrega más elementos carousel-item aquí -->
+        <div class="rombo">
+            <img src="img/laboratorios/efectos/1.webp" alt="Imagen 3" class="imagen">
+        </div>
+        <!-- Puedes agregar más divs .rombo según sea necesario -->
     </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </a>
-  </div>
-</div>
-
-<!-- Enlace a Bootstrap JS y dependencias de Popper.js -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
 </html>
