--- a/cu.html
+++ b/cu.html
@@ -676,22 +676,11 @@
 <div class="masthead">
   <div class="container h-100">
     <div class="row h-100 align-items-center">
-      <div class="col-12 animated-title">
-        <h1 class="text-top">Campus<label class="text-bottom">Villa Nueva</label></h1>
+      <div class="col-12 ">
+        <h1>Campus<label>Villa Nueva</label></h1>
       </div>
 
-      <div class="animated-title">
-        <div class="text-top">
-          <div>
-            <span>mimicking</span>
-            <span>apple's design</span>
-          </div>
-        </div>
-        <div class="text-bottom">
-          <div>for the win!</div>
-        </div>
-      </div>
-
+ 
     </div>
   </div>
 </div>
