--- a/cu.html
+++ b/cu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
 
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/carousel.css" rel="stylesheet">
+    <!--<link href="css/carousel.css" rel="stylesheet"> -->
     <link href="css/flaticon-uicons.css" rel="stylesheet">
     <link href="css/flipbox.css" rel="stylesheet">
     <link href="css/redes-sociales.css" rel="stylesheet">
