--- a/cu.html
+++ b/cu.html
@@ -9,6 +9,7 @@
     <link href="css/flaticon-uicons.css" rel="stylesheet">
     <link href="css/flipbox.css" rel="stylesheet">
     <link href="css/redes-sociales.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link href="css/_tpl/cu.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
    
@@ -1030,6 +1031,27 @@
       </section>
 
 
+         <!-- Slider main container -->
+         <div class="swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">  <img src="img/villa_nueva/villa_nueva_laboratorio1.webp" class="d-block w-100" alt="Imagen 1"></div>
+          </div>
+            <div class="swiper-slide">   <img src="img/villa_nueva/villa_nueva_laboratorio1.webp" class="d-block w-100" alt="Imagen 1"></div>
+          </div>
+            ...
+          </div>
+          <!-- If we need pagination -->
+          <div class="swiper-pagination"></div>
+
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+
+          <!-- If we need scrollbar -->
+          <div class="swiper-scrollbar"></div>
+        </div>
 
       <section class="py-4 text-center">
         <div class="container">
@@ -1041,6 +1063,8 @@
               </h5><br><br>
             </div>
           </div>
+
+       
 
      <!-- Carrusel Container -->
      <div class="carousel-container">
